# winwing-xplane-plugin

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROTATEMD11_PROFILE_IMPLEMENTATION.md  build_platforms.sh  fcu-efis.md  toolchain-lin.cmake
.claude/: settings.local.json
WINCTRL.xcodeproj/: project.pbxproj
WINCTRL.xcodeproj/xcshareddata/xcschemes/: Debug (+ link debugger).xcscheme  Debug.xcscheme  Desktop.xcscheme
Winwing.xcodeproj/: project.pbxproj
Winwing.xcodeproj/xcshareddata/xcschemes/: Debug (+ link debugger).xcscheme  Debug (Hardware MCDU as PFP).xcscheme  Debug (Manual link).xcscheme  Debug.xcscheme  Desktop.xcscheme
docker/: Dockerfile.linux
documentation/PAP3-MCP/: Buttons Seq, Off and Flags.txt  LCD Seq, Off and Flags.txt
fonts/: README.txt
rotate_md11/: Rotate_MD-11_WWPAP3_v1.0.mfproj  rotate_md11.py
src/: main.cpp
src/desktop/: ButtonIdentificationView.swift  ButtonMapping.swift  ContentView.swift  DeviceModel.swift  FCUEfisControlView.swift  FMCControlView.swift  GenericDeviceView.swift  JoystickControlView.swift  MCDUControlView.swift  PFPControlView.swift  WinctrlDesktopApp.swift  Winwing.entitlements  WinwingDesktopApp.swift  bridge.h  bridge.mm  xplane-sdk-mock.cpp
src/include/: appstate.cpp  appstate.h  config.h
src/include/products/agp/: agp-aircraft-profile.h  product-agp.cpp  product-agp.h
src/include/products/agp/profiles/: toliss-agp-profile.cpp  toliss-agp-profile.h
src/include/products/ecam32/: ecam32-aircraft-profile.h  product-ecam32.cpp  product-ecam32.h
src/include/products/ecam32/profiles/: toliss-ecam32-profile.cpp  toliss-ecam32-profile.h
src/include/products/fcu-efis/: fcu-efis-aircraft-profile.h  product-fcu-efis.cpp  product-fcu-efis.h
src/include/products/fcu-efis/profiles/: ff350-fcu-efis-profile.cpp  ff350-fcu-efis-profile.h  ff767-fcu-efis-profile.cpp  ff767-fcu-efis-profile.h  ff777-fcu-efis-profile.cpp  ff777-fcu-efis-profile.h  ffb777-fcu-efis-profile.cpp  ffb777-fcu-efis-profile.h  jf146-fcu-efis-profile.cpp  jf146-fcu-efis-profile.h  laminar-fcu-efis-profile.cpp  laminar-fcu-efis-profile.h  laminar737-fcu-efis-profile.cpp  laminar737-fcu-efis-profile.h  toliss-fcu-efis-profile.cpp  toliss-fcu-efis-profile.h
src/include/products/fmc/: fmc-aircraft-profile.h  fmc-hardware-mapping.h  product-fmc.cpp  product-fmc.h
src/include/products/fmc/fonts/: 737.h  airbus.h  airbus_1.h  airbus_2.h  airbus_3.h  airbus_4.h  b612.h  boeing.h  default.h  ejet.h  font.cpp  font.h  fonts.h  honeywell.h  vga_1.h  vga_2.h  vga_3.h  vga_4.h  xcrafts.h
src/include/products/fmc/profiles/: ff767-fmc-profile.cpp  ff767-fmc-profile.h  ff777-fmc-profile.cpp  ff777-fmc-profile.h  ixeg733-fmc-profile.cpp  ixeg733-fmc-profile.h  laminar-airbus-fmc-profile.cpp  laminar-airbus-fmc-profile.h  rotatemd11-fmc-profile.cpp  rotatemd11-fmc-profile.h  ssg748-fmc-profile.cpp  ssg748-fmc-profile.h  toliss-fmc-profile.cpp  toliss-fmc-profile.h  xcrafts-fmc-profile.cpp  xcrafts-fmc-profile.h  zibo-fmc-profile.cpp  zibo-fmc-profile.h
src/include/products/mcdu/: mcdu-aircraft-profile.h  product-mcdu.cpp  product-mcdu.h
src/include/products/mcdu/profiles/: laminar-mcdu-profile.cpp  laminar-mcdu-profile.h  toliss-mcdu-profile.cpp  toliss-mcdu-profile.h
src/include/products/pap3-mcp/: mcp-aircraft-profile.h  pap3-mcp-aircraft-profile.h  pap3-mcp-lcd-segments.h  product-pap3-mcp.cpp  product-pap3-mcp.h
src/include/products/pap3-mcp/aircraft/: pap3_aircraft.h
src/include/products/pap3-mcp/device/: illumination.cpp  illumination.h  inputs.cpp  inputs.h  pap3_demo.cpp  pap3_demo.h  pap3_device.cpp  pap3_device.h  transport.cpp  transport.h
src/include/products/pap3-mcp/lcd/: compose.cpp  compose.h  segments.cpp  segments.h
src/include/products/pap3-mcp/menu/: pap3_menu.cpp  pap3_menu.h
src/include/products/pap3-mcp/profiles/: ff777-pap3-mcp-profile.cpp  ff777-pap3-mcp-profile.h  laminar-mcp-profile.cpp  laminar-mcp-profile.h  laminar-pap3-mcp-profile.cpp  laminar-pap3-mcp-profile.h  mcp-zibo-profile.cpp  mcp-zibo-profile.h  rotatemd11-pap3-mcp-profile.cpp  rotatemd11-pap3-mcp-profile.h  zibo-mcp-profile.cpp  zibo-mcp-profile.h  zibo-pap3-mcp-profile.cpp  zibo-pap3-mcp-profile.h
src/include/products/pdc/: pdc-aircraft-profile.h  product-pdc.cpp  product-pdc.h
src/include/products/pdc/profiles/: ff777-pdc-profile.cpp  ff777-pdc-profile.h  zibo-pdc-profile.cpp  zibo-pdc-profile.h
src/include/products/pfp/: pfp-aircraft-profile.h  product-pfp.cpp  product-pfp.h
src/include/products/pfp/profiles/: ff777-pfp-profile.cpp  ff777-pfp-profile.h  ixeg733-pfp-profile.cpp  ixeg733-pfp-profile.h  ssg748-pfp-profile.cpp  ssg748-pfp-profile.h  zibo-pfp-profile.cpp  zibo-pfp-profile.h
src/include/products/ursa-minor-joystick/: product-ursa-minor-joystick.cpp  product-ursa-minor-joystick.h  ursa-minor-joystick-aircraft-profile.h
src/include/products/ursa-minor-joystick/profiles/: toliss-ursa-minor-joystick-profile.cpp  toliss-ursa-minor-joystick-profile.h  zibo-ursa-minor-joystick-profile.cpp  zibo-ursa-minor-joystick-profile.h
src/include/products/ursa-minor-throttle/: product-ursa-minor-throttle.cpp  product-ursa-minor-throttle.h  ursa-minor-throttle-aircraft-profile.h
src/include/products/ursa-minor-throttle/profiles/: toliss-ursa-minor-throttle-profile.cpp  toliss-ursa-minor-throttle-profile.h
src/include/utils/: dataref.cpp  dataref.h  packet-utils.h  path.cpp  path.h  plugins-menu.cpp  plugins-menu.h  segment-display.cpp  segment-display.h
src/include/utils/usbdevice/: usbcontroller.cpp  usbcontroller.h  usbcontroller_lin.cpp  usbcontroller_mac.cpp  usbcontroller_win.cpp  usbdevice.cpp  usbdevice.h  usbdevice_lin.cpp  usbdevice_linux.cpp  usbdevice_mac.cpp  usbdevice_win.cpp
src/include/utils/usbdevice/products/: product-mcdu.cpp  product-mcdu.h  product-ursa-minor-joystick.cpp
src/linux_shell/: Makefile  winwing_led_test.c
tools/: convert_ttf_to_font.py  test_endpoint.py  test_entrypoint_in.py
tools/wireshark/: WW_PAP3_LCD.lua  WW_PAP3_LED.lua
(+6 files in other folders)
